# mlops-deploy

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  Makefile  README.rst  app.yaml  cloudbuild.yaml  dados.json  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cloud-run.yaml
data/: data_set.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
models/: model.pkl  previsaocrimes.pkl
notebooks/: Código_Projeto.ipynb
src/app/: api.py  app.py  data_json.py  index.html  main.py
src/mlops_deploy/: __init__.py  cli.py
tests/: __init__.py  test_mlops_deploy.py
