[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_deploy"
version = "0.1.0"
description = "deploy modelo faculdade"
readme = "README.rst"
authors = [
  {name = "mlops-deploy", email = "mlops@gmail.com"}
]
maintainers = [
  {name = "mlops-deploy", email = "mlops@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tn-junior/mlops_deploy/issues"
changelog = "https://github.com/tn-junior/mlops_deploy/blob/master/changelog.md"
homepage = "https://github.com/tn-junior/mlops_deploy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

